--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 gdal = "0.13"
+gdal-sys = "0.7"
 geopolars = "0.1.0-alpha.3"
 polars = { vesrion = "0.25", features = ["dtype-binary"] }
 thiserror = { version = "1" }
