--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 gdal = "0.13"
+gdal-sys = "0.7"
 polars = { version = "0.25", features = ["dtype-binary", "dtype-date", "dtype-datetime"] }
 thiserror = { version = "1" }
