--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-gdal = "0.13"
-gdal-sys = "0.7"
-polars = { version = "0.25", features = ["dtype-binary", "dtype-date", "dtype-datetime"] }
+gdal = { git = "https://github.com/georust/gdal" }
+gdal-sys = { git = "https://github.com/georust/gdal" }
+polars = { version = "0.25", features = ["dtype-binary", "dtype-date", "dtype-datetime", "rows"] }
 thiserror = { version = "1" }
+
+[dev-dependencies]
+polars = { version = "0.25", features = ["ipc"] }
